--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AOC22 - Demborg</title>
-    <script type="module" crossorigin src="/aoc22/assets/index.c6246ca4.js"></script>
+    <script type="module" crossorigin src="/aoc22/assets/index.4f64c910.js"></script>
+    <link rel="stylesheet" href="/aoc22/assets/index.fb16a9d3.css">
   </head>
   <body>
     <div id="root"></div>
